--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -1,4 +1,11 @@
 {
+  "TokenOptions": {
+    "Audience": "yusuf@yusuf.com",
+    "Issuer": "yusuf@yusuf.com",
+    "AccesTokenExpiration": 10,
+    "SecurityKey": "mysupersecretkeymysupersecretkey"
+
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
